--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 # Site settings
-title: PHOTORAMA
+title: SPACEGRAPH
 email: "youkitae62@gmail.com"
 description: "Photo Journal"
 url: "http://62tae.github.io"
-baseurl: /TedHomepage
+baseurl: /SPACEGRAPH
 instagram_username: "62tae"
 github_username:  "62tae"
 deviantart_username: ""
