--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,10 @@
 # Site settings
 title: SPACEGRAPH
 email: "youkitae62@gmail.com"
-description: "Photo Journal"
+description: "Space, Lights, Composition, Typography and Life Journal"
 url: "http://62tae.github.io"
 baseurl: /SPACEGRAPH
-instagram_username: "62tae"
+instagram_username: "62teddy"
 github_username:  "62tae"
 deviantart_username: ""
 flickr_username: "youkitae62"
