--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@ baseurl: /SPACEGRAPH
 instagram_username: "62teddy"
 github_username:  "62tae"
 deviantart_username: ""
-flickr_username: "youkitae62"
+flickr_username: "spacegraph"
 discus_shortname: "62tae"
 share: true
 
