--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: SPACEGRAPH
 email: "youkitae62@gmail.com"
 description: "Space, Lights, Composition, Typography and Life Journal"
 url: "http://62tae.github.io"
-baseurl: /SPACEGRAPH
+baseurl: /spacegraph
 instagram_username: "62teddy"
 github_username:  "62tae"
 deviantart_username: ""
