--- a/_config.yml
+++ b/_config.yml
@@ -4,9 +4,8 @@ email: "youkitae62@gmail.com"
 description: "Space, Lights, Composition, Typography and Life Journal"
 url: "http://62tae.github.io"
 baseurl: /spacegraph
-instagram_username: "62teddy"
+instagram_username: "62tae"
 github_username:  "62tae"
-deviantart_username: ""
 flickr_username: "spacegraph"
 discus_shortname: "62tae"
 share: true
